2008-06-29  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokerclient.py.in (PokerClientTestCase.setUpClient):
	Added test for delays output from PokerClientFactory.__init__
	(PokerClientTestCase.test23_checkTranslateToFileName): Wrote method.

2008-06-28  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokerclient.py.in (PokerClientTestCase.ping): Added
	test for various outputs.

	* tests/test-clientserver.py.in
	(ClientServer.pingExpectingPrefix): Wrote method.
	(ClientServer.test02_pingExpectingPrefix): Wrote method.
	(ClientServer.test05_clientConnectionLost): Wrote method.
	(ClientServer.clientConnectionLost.ReasonMockUp): Wrote method.
	(ClientServer.test06_dummyClientError): Wrote method.
	(ClientServer.dummyClientError): Wrote method.

	* tests/test-protocol.py.in: Set verbose to 5 so messages are printed.
	(UGAMEProtocolTestCase.testConnectionLost): Added output search.
	(UGAMEProtocolTestCase.setUp): Switched verbosity to 5 so messages
	are printed.
	(UGAMEProtocolTestCase.testConnectionLostWithProtocolOk): Wrote method.
	(UGAMEProtocolTestCase.testHandleVersion): Added test for "protocol
	established" output (and for when it isn't done).
	(UGAMEProtocolTestCase.testProcessQueues): Added test for queue delay.
	(UGAMEProtocolTestCase.testHandleData): Added test for output from
	handleData().
	(UGAMEProtocolTestCase.testForceError): Wrote method.

2008-06-26  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokerchildren.py.in
	(PokerChildrenTestCase.test01_rsync_ok): Added search for
	PokerRsync::spawn message.
	(PokerChildrenTestCase.test04_rsync_fail_host_does_not_respond):
	Added search for ERROR: PokerRsync message.
	(PokerChildrenTestCase.test05_rsync_fail_no_network): Added search
	for processEnded message.
	(PokerChildrenTestCase.test12_testErrorFunction): Wrote method.
	(PokerChildrenTestCase.test01_rsync_ok.rsync_done): Added test for
	outReceived().

2008-06-25  Bradley M. Kuhn  <bkuhn@ebb.org>
